# drive-invasiveness

./: .gitignore  LICENSE  README.md
Data_Generation/: CMakeLists.txt  Parameters.cpp  Parameters.hpp  Population.cpp  Population.hpp  Simulation.cpp  Simulation.hpp  StructPop.cpp  StructPop.h  StructPopSim.cpp  StructPopSim.h  main.cpp
Data_Storage/Figure_1E_and_1F/: sim_data_P_0.15_i_1.mat  sim_data_P_0.15_i_10.mat  sim_data_P_0.15_i_2.mat  sim_data_P_0.15_i_3.mat  sim_data_P_0.15_i_4.mat  sim_data_P_0.15_i_5.mat  sim_data_P_0.15_i_6.mat  sim_data_P_0.15_i_7.mat  sim_data_P_0.15_i_8.mat  sim_data_P_0.15_i_9.mat  sim_data_P_0.5_i_1.mat  sim_data_P_0.5_i_10.mat  sim_data_P_0.5_i_2.mat  sim_data_P_0.5_i_3.mat  sim_data_P_0.5_i_4.mat  sim_data_P_0.5_i_5.mat  sim_data_P_0.5_i_6.mat  sim_data_P_0.5_i_7.mat  sim_data_P_0.5_i_8.mat  sim_data_P_0.5_i_9.mat  sim_data_P_0.9_i_1.mat  sim_data_P_0.9_i_10.mat  sim_data_P_0.9_i_2.mat  sim_data_P_0.9_i_3.mat  sim_data_P_0.9_i_4.mat  sim_data_P_0.9_i_5.mat  sim_data_P_0.9_i_6.mat  sim_data_P_0.9_i_7.mat  sim_data_P_0.9_i_8.mat  sim_data_P_0.9_i_9.mat
Data_Storage/Figure_2D/: data_index_0.csv  data_index_1.csv  data_index_10.csv  data_index_11.csv  data_index_12.csv  data_index_13.csv  data_index_14.csv  data_index_15.csv  data_index_16.csv  data_index_17.csv  (+41 more)
Figure_Generation/: gen_figure_1B.m  gen_figure_1D.m  gen_figure_1E_and_F.m  gen_figure_2C.m  gen_figure_2D.m  gen_figure_2E.m  gen_figure_3.m  gen_figure_4.m  gen_figure_5.m  gen_figure_6.m  gen_figure_7_left.m  gen_figure_7_right.m  gen_figure_8.m  gen_figure_9.m
(+321 files in other folders)
